Drafted WCd section

--- a/References/library.bib
+++ b/References/library.bib
@@ -495,6 +495,22 @@
   file = {/Users/py13je/Zotero/storage/5ZY6YT36/Crowther - 2007 - Physical Properties of Wolf-Rayet Stars.pdf}
 }
 
+@article{crowtherQuantitativeClassificationWC1998,
+  title = {Quantitative Classification of {{WC}} and {{WO}} Stars},
+  author = {Crowther, P. A. and De Marco, Orsola and Barlow, M. J.},
+  year = {1998},
+  month = may,
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {296},
+  pages = {367--378},
+  issn = {0035-8711},
+  doi = {10.1046/j.1365-8711.1998.01360.x},
+  abstract = {We present a quantitative classification scheme for carbon and oxygen sequence Wolf-Rayet stars. Our scheme uses new high-quality optical AAT and INT observations of 20 stars for which we provide narrow-band photometry and estimates of interstellar reddenings. In increasing order of excitation, our spectral classes range from WC11 to WC4 for Wolf-Rayet stars with a dominant carbon line visual spectrum, and subsequently from WO4 to WO1 for those with predominantly oxygen lines. We refine existing WC and WO schemes to incorporate stars with higher and lower excitation spectral features. Both massive stars and central stars of planetary nebulae (CSPNe) can be classified with the unified system. We have found no criterion that cleanly separates spectra of the two types of star, including elemental abundances (C/O or C/He). However, CSPNe show a wider range of line strength and width than massive stars in the same ionization subclass. Systematically lower FWHM(Civ lambda5808) values are observed from WO-type CSPNe than from massive WO stars. For WC4-11 stars, our primary diagnostic is the equivalent width or line flux ratio Civ lambdalambda5801-12/Ciiilambda5696. We extend the use of this as the principal criterion throughout the WC sequence, with few reclassifications necessary relative to Smith, Shara \& Moffat. For WO stars, Ciii is absent and our new criteria, using primarily oxygen lines, take over smoothly. We define subclasses WO4-1, using Ovi lambdalambda3811-34/Ov lambda5590 as our primary diagnostic. The continuation in spectral sequence from WC to WO is used to indicate that the sequence is a result primarily of excitation effects, rather than significant abundance differences. Our scheme allows us to confirm that massive stars and CSPNe are differently distributed over the subclasses. Around 3/5 of massive WC stars lie within the range WC5-8, while {$<$}=1/5 of CSPNe are found within these spectral types. Stars within both the highest (WO1) and lowest (WC10-11) excitation spectral classes are unique to CSPNe. A WC classification for the hot RCrB star V348 Sgr is excluded (previously [WC12]) since both Ciii lambda5696 and Civ lambda5808 are absent in its optical spectrum. Additional criteria allow us to distinguish between WC-type, `weak emission line' CSPNe, and O stars, allowing us to reclassify the central star of IRAS 21282+5050 (previously [WC11]) as an O star.},
+  keywords = {PLANETARY NEBULAE: GENERAL,STARS: FUNDAMENTAL PARAMETERS,STARS: WOLF-RAYET},
+  annotation = {ADS Bibcode: 1998MNRAS.296..367C},
+  file = {/Users/py13je/Zotero/storage/3WM6XNWK/Crowther et al. - 1998 - Quantitative classification of WC and WO stars.pdf}
+}
+
 @book{dahlquist_numerical_2008,
   title = {Numerical {{Methods}} in {{Scientific Computing}}, {{Volume I}}},
   author = {Dahlquist, Germund and Bj{\"o}rck, {\AA}ke},
@@ -1955,6 +1971,21 @@
   langid = {english},
   keywords = {local group galaxies,massive stars,stellar evolution,Wolf–Rayet stars},
   file = {/Users/py13je/Zotero/storage/ZG27P3NR/Neugent and Massey - 2019 - The Wolf–Rayet Content of the Galaxies of the Loca.pdf;/Users/py13je/Zotero/storage/B7MNTPM8/74.html}
+}
+
+@article{niedzielskiKinematicalStructureWolfRayet2002,
+  title = {Kinematical {{Structure}} of {{Wolf-Rayet Winds}}. {{I}}.{{Terminal Wind Velocity}}},
+  author = {Niedzielski, A. and Skorzynski, W.},
+  year = {2002},
+  month = mar,
+  journal = {Acta Astronomica},
+  volume = {52},
+  pages = {81--104},
+  issn = {0001-5237},
+  abstract = {New terminal wind velocities for 164 Wolf-Rayet stars (from the Galaxy and LMC) based on PCyg profiles of lambda1550 CIV resonance line were derived from the archive high and low resolution IUE spectra available form the INES database. The high resolution data on 59 WR stars (39 from the Galaxy and 20 from LMC) were used to calibrate the empirical relation lambda\_min\^Abs- lambda\_peak\^Emis vs terminal wind velocity, which was then used for determinations of the terminal wind velocities from the low resolution IUE data. We almost doubled the previous most extended sample of such measurements. Our new measurements, based on high resolution data, are precise within 5-7\%. Measurements, based on the low resolution spectra have the formal errors of approx 40-60\%. A comparison of the present results with other determinations suggests higher precision of approx 20\%. We found that the terminal wind velocities for the Galactic WC and WN stars correlate with the WR spectral subtype. We also found that the LMC WN stars have winds slower than their Galactic counterparts, up to two times in the case of the WNE stars. No influence of binarity on terminal wind velocities was found. Our extended set of measurements allowed us to test application of the radiation driven wind theory to the WR stars. We found that, contrary to OB stars, terminal wind velocities of the WR stars correlate only weakly with stellar temperature. We also note that the terminal to escape velocity ratio for the WR stars is relatively low: 2.55 pm 1.14 for the Galactic WN stars and 1.78 pm 0.70 for the Galactic WCs. This ratio decreases with temperature of WR stars, contrary to what is observed in the case of OB stars. The presented results show complex influence of chemical composition on the WR winds driving mechanism efficiency. Our kinematical data on WR winds suggest evolutionary sequence: WNL --{$>$} WNE --{$>$} WCE --{$>$} WCL.},
+  keywords = {outflows,Stars: winds,Stars: Wolf-Rayet,Ultraviolet: stars},
+  annotation = {ADS Bibcode: 2002AcA....52...81N},
+  file = {/Users/py13je/Zotero/storage/4ME8G9QW/Niedzielski and Skorzynski - 2002 - Kinematical Structure of Wolf-Rayet Winds. I.Termi.pdf}
 }
 
 @misc{noauthor_introduction_nodate,
