--- a/Thesis.tex
+++ b/Thesis.tex
@@ -182,6 +182,8 @@
 \mainmatter
 \pagenumbering{arabic}
 
+\setlength{\parskip}{0.5em}
+
 % Each chapter has its own individual folder, containing a tex file and figures folder
 \include{Chapters/Chapter_1_Introduction/Introduction.tex}
 \include{Chapters/Chapter_2_Background/Background.tex}
