Lots of additions - Drafting of numerical simulation section - Restructuring of numerical simulation section - Drafting of AMR section

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -220,6 +220,42 @@
   file = {/Users/py13je/Zotero/storage/ZLEVIEX5/Bekaert et al. - 2020 - The origin and fate of volatile elements on Earth .pdf;/Users/py13je/Zotero/storage/ISHIFAXX/s41598-020-62650-3.html}
 }
 
+@article{bergerAdaptiveMeshRefinement1984,
+  title = {Adaptive Mesh Refinement for Hyperbolic Partial Differential Equations},
+  author = {Berger, Marsha J and Oliger, Joseph},
+  date = {1984-03-01},
+  journaltitle = {Journal of Computational Physics},
+  shortjournal = {Journal of Computational Physics},
+  volume = {53},
+  number = {3},
+  pages = {484--512},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(84)90073-1},
+  url = {https://www.sciencedirect.com/science/article/pii/0021999184900731},
+  urldate = {2022-01-01},
+  abstract = {An adaptive method based on the idea of multiple component grids for the solution of hyperbolic partial differential equations using finite difference techniques is presented. Based upon Richardson-type estimates of the truncation error, refined grids are created or existing ones removed to attain a given accuracy for a minimum amount of work. The approach is recursive in that fine grids can contain even finer grids. The grids with finer mesh width in space also have a smaller mesh width in time, making this a mesh refinement algorithm in time and space. We present the algorithm, error estimation procedure, and the data structures, and conclude with numerical examples in one and two space dimensions.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/I9CXN2IN/Berger and Oliger - 1984 - Adaptive mesh refinement for hyperbolic partial di.pdf}
+}
+
+@article{bergerLocalAdaptiveMesh1989,
+  title = {Local Adaptive Mesh Refinement for Shock Hydrodynamics},
+  author = {Berger, M. J. and Colella, P.},
+  date = {1989-05-01},
+  journaltitle = {Journal of Computational Physics},
+  shortjournal = {Journal of Computational Physics},
+  volume = {82},
+  number = {1},
+  pages = {64--84},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(89)90035-1},
+  url = {https://www.sciencedirect.com/science/article/pii/0021999189900351},
+  urldate = {2022-01-01},
+  abstract = {The aim of this work is the development of an automatic, adaptive mesh refinement strategy for solving hyperbolic conservation laws in two dimensions. There are two main difficulties in doing this. The first problem is due to the presence of discontinuities in the solution and the effect on them of discontinuities in the mesh. The second problem is how to organize the algorithm to minimize memory and CPU overhead. This is an important consideration and will continue to be important as more sophisticated algorithms that use data structures other than arrays are developed for use on vector and parallel computers.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/B5UUSQFX/Berger and Colella - 1989 - Local adaptive mesh refinement for shock hydrodyna.pdf}
+}
+
 @article{betheEnergyProductionStars1939,
   title = {Energy {{Production}} in {{Stars}}},
   author = {Bethe, H. A.},
@@ -504,6 +540,24 @@
   volume = {54},
   number = {1},
   pages = {174--201}
+}
+
+@article{colellaPiecewiseParabolicMethod1984,
+  title = {The {{Piecewise Parabolic Method}} ({{PPM}}) for Gas-Dynamical Simulations},
+  author = {Colella, Phillip and Woodward, Paul R},
+  date = {1984-04-01},
+  journaltitle = {Journal of Computational Physics},
+  shortjournal = {Journal of Computational Physics},
+  volume = {54},
+  number = {1},
+  pages = {174--201},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(84)90143-8},
+  url = {https://www.sciencedirect.com/science/article/pii/0021999184901438},
+  urldate = {2021-12-27},
+  abstract = {We present the piecewise parabolic method, a higher-order extension of Godunov's method. There are several new features of this method which distinguish it from other higher-order Godunov-type methods. We use a higher-order spatial interpolation than previously used, which allows for a steeper representation of discontinuities, particularly contact discontinuities. We introduce a simpler and more robust algorithm for calculating the nonlinear wave interactions used to compute fluxes. Finally, we recognize the need for additional dissipation in any higher-order Godunov method of this type, and introduce it in such a way so as not to degrade the quality of the results.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/CHJ6UNSF/Colella and Woodward - 1984 - The Piecewise Parabolic Method (PPM) for gas-dynam.pdf}
 }
 
 @article{crowther_dust_2003,
@@ -1034,6 +1088,24 @@
   file = {/Users/py13je/Zotero/storage/CVA9YVF3/10029009112.html}
 }
 
+@article{godunovDifferenzenmethodeFurNaherungsberechnung1959,
+  title = {Eine Differenzenmethode f\"ur die N\"aherungsberechnung unstetiger L\"osungen der hydrodynamischen Gleichungen},
+  author = {Godunov, S. K.},
+  date = {1959},
+  journaltitle = {Matematicheski\textbackslash u \i{} Sbornik. Novaya Seriya},
+  shortjournal = {Mat. Sb., Nov. Ser.},
+  volume = {47},
+  pages = {271--306},
+  publisher = {{Izdatel'stvo Nauka, Moskva}},
+  url = {https://zbmath.org/?q=an%3A0171.46204},
+  urldate = {2021-12-27},
+  langid = {russian},
+  zmnumber = {0171.46204},
+  keywords = {difference method,discontinuous solutions,equations of hydrodynamics},
+  annotation = {MSC2010: 76M20 = Finite difference methods applied to problems in fluid mechanics MSC2010: 76L05 = Shock waves and blast waves in fluid mechanics},
+  file = {/Users/py13je/Zotero/storage/FTNIT9R4/zbmath.org.html}
+}
+
 @article{gottliebHighOrderStrong2009,
   title = {High {{Order Strong Stability Preserving Time Discretizations}}},
   author = {Gottlieb, Sigal and Ketcheson, David I. and Shu, Chi-Wang},
@@ -1333,6 +1405,16 @@
   abstract = {The winds of cool luminous AGB stars are commonly assumed to be driven by radiative acceleration of dust grains which form in the extended atmospheres produced by pulsation-induced shock waves. The dust particles gain momentum by absorption or scattering of stellar photons, and they drag along the surrounding gas particles through collisions, triggering an outflow. This scenario, here referred to as Pulsation-Enhanced Dust-DRiven Outflow (PEDDRO), has passed a range of critical observational tests as models have developed from empirical and qualitative to increasingly self-consistent and quantitative. A reliable theory of mass loss is an essential piece in the bigger picture of stellar and galactic chemical evolution, and central for determining the contribution of AGB stars to the dust budget of galaxies. In this review, I discuss the current understanding of wind acceleration and indicate areas where further efforts by theorists and observers are needed.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/KHKZG988/Höfner - 2015 - Wind Acceleration in AGB Stars Solid Ground and L.pdf;/Users/py13je/Zotero/storage/DJFLBCU9/ui.adsabs.harvard.edu.html}
+}
+
+@online{HomePrincetonUniversityAthena,
+  title = {Home {$\cdot$} {{PrincetonUniversity}}/Athena {{Wiki}}},
+  url = {https://github.com/PrincetonUniversity/athena},
+  urldate = {2021-12-27},
+  abstract = {Athena++ GRMHD code and adaptive mesh refinement (AMR) framework - Home {$\cdot$} PrincetonUniversity/athena Wiki},
+  langid = {english},
+  organization = {{GitHub}},
+  file = {/Users/py13je/Zotero/storage/P5T379HA/wiki.html}
 }
 
 @report{huberEffectiveVectorizationOpenMP2017a,
@@ -1925,6 +2007,21 @@
   abstract = {Some carbon-rich Wolf-Rayet stars are known to form dust (WCd stars). Several of these systems are now known to be binary stars where the shocked wind collisions provide the needed high densities and carbon-rich environments in which to form dust. However, we are not yet certain if all WCd stars are binaries or not, or if the dust can form in single WCd stars. We began a survey of known WCd binaries with the high-resolution IGRINS spectrograph in the near-infrared H and K bands. We report on the signatures of the massive O star companion in the WR 140 system as well as preliminary results on other WCd binaries as we begin to expand our survey to most known Galactic WCd stars with IGRINS at Gemini.},
   eventtitle = {American {{Astronomical Society Meeting Abstracts}}},
   file = {/Users/py13je/Zotero/storage/YBJBTKWM/abstract.html}
+}
+
+@article{meyerStabilizedRungeKuttaLegendreMethod2014,
+  title = {A Stabilized {{Runge-Kutta-Legendre}} Method for Explicit Super-Time-Stepping of Parabolic and Mixed Equations},
+  author = {Meyer, Chad D. and Balsara, Dinshaw S. and Aslam, Tariq D.},
+  date = {2014-01-01},
+  journaltitle = {Journal of Computational Physics},
+  volume = {257},
+  pages = {594--626},
+  issn = {0021-9991},
+  doi = {10.1016/j.jcp.2013.08.021},
+  url = {https://ui.adsabs.harvard.edu/abs/2014JCoPh.257..594M},
+  urldate = {2021-12-27},
+  abstract = {Parabolic partial differential equations appear in several physical problems, including problems that have a dominant hyperbolic part coupled to a sub-dominant parabolic component. Explicit methods for their solution are easy to implement but have very restrictive time step constraints. Implicit solution methods can be unconditionally stable but have the disadvantage of being computationally costly or difficult to implement. Super-time-stepping methods for treating parabolic terms in mixed type partial differential equations occupy an intermediate position. In such methods each superstep takes ``s'' explicit Runge-Kutta-like time-steps to advance the parabolic terms by a time-step that is s2 times larger than a single explicit time-step. The expanded stability is usually obtained by mapping the short recursion relation of the explicit Runge-Kutta scheme to the recursion relation of some well-known, stable polynomial. Prior work has built temporally first- and second-order accurate super-time-stepping methods around the recursion relation associated with Chebyshev polynomials. Since their stability is based on the boundedness of the Chebyshev polynomials, these methods have been called RKC1 and RKC2. In this work we build temporally first- and second-order accurate super-time-stepping methods around the recursion relation associated with Legendre polynomials. We call these methods RKL1 and RKL2. The RKL1 method is first-order accurate in time; the RKL2 method is second-order accurate in time. We verify that the newly-designed RKL1 and RKL2 schemes have a very desirable monotonicity preserving property for one-dimensional problems - a solution that is monotone at the beginning of a time step retains that property at the end of that time step. It is shown that RKL1 and RKL2 methods are stable for all values of the diffusion coefficient up to the maximum value. We call this a convex monotonicity preserving property and show by examples that it is very useful in parabolic problems with variable diffusion coefficients. This includes variable coefficient parabolic equations that might give rise to skew symmetric terms. The RKC1 and RKC2 schemes do not share this convex monotonicity preserving property. One-dimensional and two-dimensional von Neumann stability analyses of RKC1, RKC2, RKL1 and RKL2 are also presented, showing that the latter two have some advantages. The paper includes several details to facilitate implementation. A detailed accuracy analysis is presented to show that the methods reach their design accuracies. A stringent set of test problems is also presented. To demonstrate the robustness and versatility of our methods, we show their successful operation on problems involving linear and non-linear heat conduction and viscosity, resistive magnetohydrodynamics, ambipolar diffusion dominated magnetohydrodynamics, level set methods and flux limited radiation diffusion. In a prior paper (Meyer, Balsara and Aslam 2012 [36]) we have also presented an extensive test-suite showing that the RKL2 method works robustly in the presence of shocks in an anisotropically conducting, magnetized plasma.},
+  annotation = {ADS Bibcode: 2014JCoPh.257..594M}
 }
 
 @article{millar_dust_1993,
@@ -2759,6 +2856,22 @@
   publisher = {{Cambridge university press Cambridge}}
 }
 
+@article{ruuthHighOrderStrongStabilityPreservingRungeKutta2005,
+  title = {High-{{Order Strong-Stability-Preserving Runge-Kutta Methods}} with {{Downwind-Biased Spatial Discretizations}}},
+  author = {Ruuth, Steven J. and Spiteri, Raymond J.},
+  date = {2005},
+  journaltitle = {SIAM Journal on Numerical Analysis},
+  volume = {42},
+  number = {3},
+  eprint = {4101063},
+  eprinttype = {jstor},
+  pages = {974--996},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  issn = {0036-1429},
+  abstract = {Strong-stability-preserving Runge-Kutta (SSPRK) methods are a specific type of time discretization method that have been widely used for the time evolution of hyperbolic partial differential equations (PDEs). Under a suitable stepsize restriction, these methods share a desirable nonlinear stability property with the underlying PDE, e.g., stability with respect to total variation, the maximum norm, or other convex functional. This is of particular interest when the solution exhibits shock-like or other nonsmooth behavior. Many results are known for SSPRK methods with nonnegative coefficients. However, it has recently been shown that such methods cannot exist with order greater than 4. In this paper, we give a systematic treatment of explicit SSPRK methods with general (i.e., possibly negative) coefficients up to order 5. In particular, we show how to optimally treat negative coefficients (corresponding to a change in the upwind direction of the spatial discretization) in the context of effective CFL coefficient maximization and provide proofs of optimality of some explicit SSPRK methods of orders 1 to 4. We also give the first known explicit fifth-order SSPRK schemes and show their effectiveness in practice versus more well-known fifth-order explicit Runge-Kutta schemes.},
+  file = {/Users/py13je/Zotero/storage/V98J8I6C/Ruuth and Spiteri - 2005 - High-Order Strong-Stability-Preserving Runge-Kutta.pdf}
+}
+
 @book{ryanStellarEvolutionNucleosynthesis2010a,
   title = {Stellar Evolution and Nucleosynthesis},
   author = {Ryan, Sean G. and Norton, Andrew J.},
@@ -3336,6 +3449,24 @@
   file = {/Users/py13je/Zotero/storage/PGCQW5JF/Toro - 2013 - Riemann solvers and numerical methods for fluid dy.pdf}
 }
 
+@article{toroRestorationContactSurface1994,
+  title = {Restoration of the Contact Surface in the {{HLL-Riemann}} Solver},
+  author = {Toro, E. F. and Spruce, M. and Speares, W.},
+  date = {1994-07-01},
+  journaltitle = {Shock Waves},
+  shortjournal = {Shock Waves},
+  volume = {4},
+  number = {1},
+  pages = {25--34},
+  issn = {1432-2153},
+  doi = {10.1007/BF01414629},
+  url = {https://doi.org/10.1007/BF01414629},
+  urldate = {2021-12-27},
+  abstract = {The missing contact surface in the approximate Riemann solver of Harten, Lax, and van Leer is restored. This is achieved following the same principles as in the original solver. We also present new ways of obtaining wave-speed estimates. The resulting solver is as accurate and robust as the exact Riemann solver, but it is simpler and computationally more efficient than the latter, particulaly for non-ideal gases. The improved Riemann solver is implemented in the second-order WAF method and tested for one-dimensional problems with exact solutions and for a two-dimensional problem with experimental results.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/AKSUZH6V/Toro et al. - 1994 - Restoration of the contact surface in the HLL-Riem.pdf}
+}
+
 @article{townsendExactIntegrationScheme2009,
   title = {An {{Exact Integration Scheme}} for {{Radiative Cooling}} in {{Hydrodynamical Simulations}}},
   author = {Townsend, R. H. D.},
@@ -3466,6 +3597,25 @@
   isbn = {978-0-7923-3184-1 978-94-011-0205-6},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/NUMQ7IWJ/van der Hucht and Williams - 1995 - Wolf-Rayet Stars Binaries, Colliding Winds, Evolu.pdf}
+}
+
+@article{vanleerUltimateConservativeDifference1979,
+  title = {Towards the Ultimate Conservative Difference Scheme. {{V}}. {{A}} Second-Order Sequel to {{Godunov}}'s Method},
+  author = {van Leer, Bram},
+  options = {useprefix=true},
+  date = {1979-07-01},
+  journaltitle = {Journal of Computational Physics},
+  shortjournal = {Journal of Computational Physics},
+  volume = {32},
+  number = {1},
+  pages = {101--136},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(79)90145-1},
+  url = {https://www.sciencedirect.com/science/article/pii/0021999179901451},
+  urldate = {2021-12-27},
+  abstract = {A method of second-order accuracy is described for integrating the equations of ideal compressible flow. The method is based on the integral conservation laws and is dissipative, so that it can be used across shocks. The heart of the method is a one-dimensional Lagrangean scheme that may be regarded as a second-order sequel to Godunov's method. The second-order accuracy is achieved by taking the distributions of the state quantities inside a gas slab to be linear, rather than uniform as in Godunov's method. The Lagrangean results are remapped with least-squares accuracy onto the desired Euler grid in a separate step. Several monotonicity algorithms are applied to ensure positivity, monotonicity and nonlinear stability. Higher dimensions are covered through time splitting. Numerical results for one-dimensional and two-dimensional flows are presented, demonstrating the efficiency of the method. The paper concludes with a summary of the results of the whole series ``Towards the Ultimate Conservative Difference Scheme.''},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/E49SVQWV/van Leer - 1979 - Towards the ultimate conservative difference schem.pdf}
 }
 
 @book{VeryMassiveStars2014,
