--- a/Thesis.tex
+++ b/Thesis.tex
@@ -90,6 +90,8 @@
 \usepackage{listings}
 \usepackage{xcolor}
 
+\usepackage[super]{nth} % Allows for superscripting numbers
+
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
@@ -119,7 +121,9 @@
 
 \newcommand{\tx}{\text}
 \newcommand{\ts}{\textsuperscript}
-
+\newcommand{\mg}{\texttt{MG}}
+\newcommand{\athena}{\texttt{Athena++}}
+\newcommand{\link}[1]{\texttt{\href{#1}{#1}}}
 
 % Setup for BibLaTeX, used instead of BibTeX as it is more flexible and has proper APA citation
 \usepackage[
@@ -152,6 +156,8 @@
 {\text{pc}}
 \DeclareSIUnit[]\erg
 {\text{erg}}
+\DeclareSIUnit[]\arcsecond
+{\text{as}}
 
 \begin{document}
 %\baselineskip=18pt plus1pt
