Some more writing - Working on WR systems - Second round of corrections for chapter 4 - Fixed bug with chapter titles being double ruled, to do with \parskip

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -1,4 +1,14 @@
 
+@book{10.5555/1593511,
+  title = {Python 3 Reference Manual},
+  author = {Van Rossum, Guido and Drake, Fred L.},
+  date = {2009},
+  publisher = {{CreateSpace}},
+  location = {{Scotts Valley, CA}},
+  isbn = {1-4414-1269-7},
+  keywords = {software}
+}
+
 @article{1982ApJ...259..282A,
   title = {The Theory of Radiatively Driven Stellar Winds. {{II}}. {{The}} Line Acceleration.},
   author = {Abbott, D. C.},
@@ -153,6 +163,43 @@
   abstract = {We investigated the long-term behaviour in X-rays of the colliding wind binary WR 25, using archival data obtained with Suzaku, Swift, XMM-Newton, and NuSTAR spanning over {$\sim$}16 years. Our analysis reveals phase-locked variations repeating consistently over many consecutive orbits, in agreement with an X-ray emission fully explained by thermal emission from the colliding winds in the 208-d orbit. We report on a significant deviation of the X-ray flux with respect to the 1/D trend (expected for adiabatic shocked winds) close to periastron passage. The absence of a drop in post-shock plasma temperature close to periastron suggests this break in trend cannot be explained in terms of reduced pre-shock velocities in this part of the orbit. Finally, NuSTAR data reveal a lack of hard X-ray emission (above 10.0 keV) above the background level. Upper limits on a putative non-thermal emission strongly suggest that the sensitivity of present hard X-ray observatories is not sufficient to detect non-thermal emission from massive binaries above 10 keV, unless the wind kinetic power is large enough to significantly feed particle acceleration in the wind-wind interaction.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/J9T4CKVI/Arora et al. - 2019 - Long-term soft and hard X-ray investigation of the.pdf}
+}
+
+@online{astropy:2013,
+  title = {Astropy: {{A}} Community {{Python}} Package for Astronomy},
+  author = {{Astropy Collaboration} and Robitaille, T. P. and Tollerud, E. J. and Greenfield, P. and Droettboom, M. and Bray, E. and Aldcroft, T. and Davis, M. and Ginsburg, A. and Price-Whelan, A. M. and Kerzendorf, W. E. and Conley, A. and Crighton, N. and Barbary, K. and Muna, D. and Ferguson, H. and Grollier, F. and Parikh, M. M. and Nair, P. H. and Unther, H. M. and Deil, C. and Woillez, J. and Conseil, S. and Kramer, R. and Turner, J. E. H. and Singer, L. and Fox, R. and Weaver, B. A. and Zabalza, V. and Edwards, Z. I. and Azalee Bostroem, K. and Burke, D. J. and Casey, A. R. and Crawford, S. M. and Dencheva, N. and Ely, J. and Jenness, T. and Labrie, K. and Lim, P. L. and Pierfederici, F. and Pontzen, A. and Ptak, A. and Refsdal, B. and Servillat, M. and Streicher, O.},
+  date = {2013-10},
+  volume = {558},
+  eprint = {1307.6212},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph.IM},
+  pages = {A33},
+  doi = {10.1051/0004-6361/201322068},
+  url = {https://dx.doi.org/10.1051/0004-6361/201322068},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {http://adsabs.harvard.edu/abs/2013A\%26A...558A..33A},
+  archiveprefix = {arXiv},
+  eid = {A33},
+  keywords = {methods: data analysis,methods: miscellaneous,software,virtual observatory tools}
+}
+
+@online{astropy:2018,
+  title = {The Astropy Project: {{Building}} an Open-Science Project and Status of the v2.0 Core Package},
+  author = {{Astropy Collaboration} and Price-Whelan, A. M. and Sip\H{o}cz, B. M. and G\"unther, H. M. and Lim, P. L. and Crawford, S. M. and Conseil, S. and Shupe, D. L. and Craig, M. W. and Dencheva, N. and Ginsburg, A. and Vand erPlas, J. T. and Bradley, L. D. and P\'erez-Su\'arez, D. and de Val-Borro, M. and Aldcroft, T. L. and Cruz, K. L. and Robitaille, T. P. and Tollerud, E. J. and Ardelean, C. and Babej, T. and Bach, Y. P. and Bachetti, M. and Bakanov, A. V. and Bamford, S. P. and Barentsen, G. and Barmby, P. and Baumbach, A. and Berry, K. L. and Biscani, F. and Boquien, M. and Bostroem, K. A. and Bouma, L. G. and Brammer, G. B. and Bray, E. M. and Breytenbach, H. and Buddelmeijer, H. and Burke, D. J. and Calderone, G. and Cano Rodr\'iguez, J. L. and Cara, M. and Cardoso, J. V. M. and Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and D'Avella, D. and Deil, C. and Depagne, \'E. and Dietrich, J. P. and Donath, A. and Droettboom, M. and Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L. A. and Finethy, T. and Fox, R. T. and Garrison, L. H. and Gibbons, S. L. J. and Goldstein, D. A. and Gommers, R. and Greco, J. P. and Greenfield, P. and Groener, A. M. and Grollier, F. and Hagen, A. and Hirst, P. and Homeier, D. and Horton, A. J. and Hosseinzadeh, G. and Hu, L. and Hunkeler, J. S. and Ivezi\'c, \v{Z}. and Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and Kern, N. S. and Kerzendorf, W. E. and Khvalko, A. and King, J. and Kirkby, D. and Kulkarni, A. M. and Kumar, A. and Lee, A. and Lenz, D. and Littlefair, S. P. and Ma, Z. and Macleod, D. M. and Mastropietro, M. and McCully, C. and Montagnac, S. and Morris, B. M. and Mueller, M. and Mumford, S. J. and Muna, D. and Murphy, N. A. and Nelson, S. and Nguyen, G. H. and Ninan, J. P. and N\"othe, M. and Ogaz, S. and Oh, S. and Parejko, J. K. and Parley, N. and Pascual, S. and Patil, R. and Patil, A. A. and Plunkett, A. L. and Prochaska, J. X. and Rastogi, T. and Reddy Janga, V. and Sabater, J. and Sakurikar, P. and Seifert, M. and Sherbert, L. E. and Sherwood-Taylor, H. and Shih, A. Y. and Sick, J. and Silbiger, M. T. and Singanamalla, S. and Singer, L. P. and Sladen, P. H. and Sooley, K. A. and Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S. W. and Tremblay, G. R. and Turner, J. E. H. and Terr\'on, V. and van Kerkwijk, M. H. and de la Vega, A. and Watkins, L. L. and Weaver, B. A. and Whitmore, J. B. and Woillez, J. and Zabalza, V. and {Astropy Contributors}},
+  options = {useprefix=true},
+  date = {2018-09},
+  volume = {156},
+  number = {3},
+  eprint = {1801.02634},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph.IM},
+  pages = {123},
+  doi = {10.3847/1538-3881/aabc4f},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
+  archiveprefix = {arXiv},
+  eid = {123},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,methods: data analysis,methods: miscellaneous,methods: statistical,reference systems,software}
 }
 
 @book{bappuWolfRayetHighTemperatureStars1973,
@@ -1271,6 +1318,21 @@
   file = {/Users/py13je/Zotero/storage/PSD9TI98/Harries et al. - 2004 - Three-dimensional dust radiative-transfer models .pdf;/Users/py13je/Zotero/storage/63NPPFC8/1116570.html;/Users/py13je/Zotero/storage/ULEXVAEF/1116570.html}
 }
 
+@article{harris2020array,
+  title = {Array Programming with {{NumPy}}},
+  author = {Harris, Charles R. and Millman, K. Jarrod and van der Walt, St\'efan J. and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and van Kerkwijk, Marten H. and Brett, Matthew and Haldane, Allan and del R\'io, Jaime Fern\'andez and Wiebe, Mark and Peterson, Pearu and G\'erard-Marchant, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+  options = {useprefix=true},
+  date = {2020-09},
+  journaltitle = {Nature},
+  volume = {585},
+  number = {7825},
+  pages = {357--362},
+  publisher = {{Springer Science and Business Media LLC}},
+  doi = {10.1038/s41586-020-2649-2},
+  url = {https://doi.org/10.1038/s41586-020-2649-2},
+  keywords = {software}
+}
+
 @book{hartquist_blowing_2004,
   title = {Blowing {{Bubbles}} in the {{Cosmos}}: {{Astronomical Winds}}, {{Jets}}, and {{Explosions}}},
   shorttitle = {Blowing {{Bubbles}} in the {{Cosmos}}},
@@ -1417,6 +1479,21 @@
   file = {/Users/py13je/Zotero/storage/P5T379HA/wiki.html}
 }
 
+@software{HPV:VisIt,
+  title = {{{VisIt}}: {{An}} End-User Tool for Visualizing and Analyzing Very Large Data},
+  author = {Childs, Hank and Brugger, Eric and Whitlock, Brad and Meredith, Jeremy and Ahern, Sean and Pugmire, David and Biagas, Kathleen and Miller, Mark and Harrison, Cyrus and Weber, Gunther H. and Krishnan, Hari and Fogal, Thomas and Sanderson, Allen and Garth, Christoph and Bethel, E. Wes and Camp, David and R\"ubel, Oliver and Durant, Marc and Favre, Jean M. and Navr\'atil, Paul},
+  date = {2012-10}
+}
+
+@incollection{HPV:VisIt,
+  title = {{{VisIt}}: {{An}} End-User Tool for Visualizing and Analyzing Very Large Data},
+  booktitle = {High Performance {{Visualization}}\textendash{{Enabling}} Extreme-Scale Scientific Insight},
+  author = {Childs, Hank and Brugger, Eric and Whitlock, Brad and Meredith, Jeremy and Ahern, Sean and Pugmire, David and Biagas, Kathleen and Miller, Mark and Harrison, Cyrus and Weber, Gunther H. and Krishnan, Hari and Fogal, Thomas and Sanderson, Allen and Garth, Christoph and Bethel, E. Wes and Camp, David and R\"ubel, Oliver and Durant, Marc and Favre, Jean M. and Navr\'atil, Paul},
+  date = {2012-10},
+  pages = {357--372},
+  keywords = {software}
+}
+
 @report{huberEffectiveVectorizationOpenMP2017a,
   title = {Effective {{Vectorization}} with {{OpenMP}} 4.5},
   author = {Huber, Joseph N. and Hernandez, Oscar R. and Lopez, Matthew Graham},
@@ -1428,6 +1505,20 @@
   urldate = {2020-02-28},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/4DKHZ8FA/Huber et al. - 2017 - Effective Vectorization with OpenMP 4.5.pdf}
+}
+
+@article{Hunter:2007,
+  title = {Matplotlib: {{A 2D}} Graphics Environment},
+  author = {Hunter, J. D.},
+  date = {2007},
+  journaltitle = {Computing in Science \& Engineering},
+  volume = {9},
+  number = {3},
+  pages = {90--95},
+  publisher = {{IEEE COMPUTER SOC}},
+  doi = {10.1109/MCSE.2007.55},
+  abstract = {Matplotlib is a 2D graphics package used for Python for application development, interactive scripting, and publication-quality image generation across user interfaces and operating systems.},
+  keywords = {software}
 }
 
 @article{ibenCommonEnvelopesBinary1993,
@@ -3306,6 +3397,16 @@
   urldate = {2018-08-05},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/FG2V5BZH/Taam and Sandquist - 2000 - Common Envelope Evolution of Massive Binary Stars.pdf}
+}
+
+@software{tange_2021_5523272,
+  title = {{{GNU}} Parallel 20210922 ('vindelev')},
+  author = {Tange, Ole},
+  date = {2021-09},
+  doi = {10.5281/zenodo.5523272},
+  url = {https://doi.org/10.5281/zenodo.5523272},
+  organization = {{Zenodo}},
+  keywords = {software}
 }
 
 @article{tazzari_physical_2017,
