--- a/References/library.bib
+++ b/References/library.bib
@@ -1,4 +1,14 @@
 
+@book{10.5555/1593511,
+  title = {Python 3 Reference Manual},
+  author = {Van Rossum, Guido and Drake, Fred L.},
+  year = {2009},
+  publisher = {{CreateSpace}},
+  address = {{Scotts Valley, CA}},
+  isbn = {1-4414-1269-7},
+  keywords = {software}
+}
+
 @article{1982ApJ...259..282A,
   title = {The Theory of Radiatively Driven Stellar Winds. {{II}}. {{The}} Line Acceleration.},
   author = {Abbott, D. C.},
@@ -140,6 +150,43 @@
   file = {/Users/py13je/Zotero/storage/J9T4CKVI/Arora et al. - 2019 - Long-term soft and hard X-ray investigation of the.pdf}
 }
 
+@article{astropy:2013,
+  title = {Astropy: {{A}} Community {{Python}} Package for Astronomy},
+  author = {{Astropy Collaboration} and Robitaille, T. P. and Tollerud, E. J. and Greenfield, P. and Droettboom, M. and Bray, E. and Aldcroft, T. and Davis, M. and Ginsburg, A. and {Price-Whelan}, A. M. and Kerzendorf, W. E. and Conley, A. and Crighton, N. and Barbary, K. and Muna, D. and Ferguson, H. and Grollier, F. and Parikh, M. M. and Nair, P. H. and Unther, H. M. and Deil, C. and Woillez, J. and Conseil, S. and Kramer, R. and Turner, J. E. H. and Singer, L. and Fox, R. and Weaver, B. A. and Zabalza, V. and Edwards, Z. I. and Azalee Bostroem, K. and Burke, D. J. and Casey, A. R. and Crawford, S. M. and Dencheva, N. and Ely, J. and Jenness, T. and Labrie, K. and Lim, P. L. and Pierfederici, F. and Pontzen, A. and Ptak, A. and Refsdal, B. and Servillat, M. and Streicher, O.},
+  year = {2013},
+  month = oct,
+  volume = {558},
+  eprint = {1307.6212},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph.IM},
+  pages = {A33},
+  doi = {10.1051/0004-6361/201322068},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {http://adsabs.harvard.edu/abs/2013A\%26A...558A..33A},
+  archiveprefix = {arXiv},
+  eid = {A33},
+  keywords = {methods: data analysis,methods: miscellaneous,software,virtual observatory tools}
+}
+
+@article{astropy:2018,
+  title = {The Astropy Project: {{Building}} an Open-Science Project and Status of the v2.0 Core Package},
+  author = {{Astropy Collaboration} and {Price-Whelan}, A. M. and Sip{\H o}cz, B. M. and G{\"u}nther, H. M. and Lim, P. L. and Crawford, S. M. and Conseil, S. and Shupe, D. L. and Craig, M. W. and Dencheva, N. and Ginsburg, A. and {Vand erPlas}, J. T. and Bradley, L. D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and Aldcroft, T. L. and Cruz, K. L. and Robitaille, T. P. and Tollerud, E. J. and Ardelean, C. and Babej, T. and Bach, Y. P. and Bachetti, M. and Bakanov, A. V. and Bamford, S. P. and Barentsen, G. and Barmby, P. and Baumbach, A. and Berry, K. L. and Biscani, F. and Boquien, M. and Bostroem, K. A. and Bouma, L. G. and Brammer, G. B. and Bray, E. M. and Breytenbach, H. and Buddelmeijer, H. and Burke, D. J. and Calderone, G. and Cano Rodr{\'i}guez, J. L. and Cara, M. and Cardoso, J. V. M. and Cheedella, S. and Copin, Y. and Corrales, L. and Crichton, D. and D'Avella, D. and Deil, C. and Depagne, {\'E}. and Dietrich, J. P. and Donath, A. and Droettboom, M. and Earl, N. and Erben, T. and Fabbro, S. and Ferreira, L. A. and Finethy, T. and Fox, R. T. and Garrison, L. H. and Gibbons, S. L. J. and Goldstein, D. A. and Gommers, R. and Greco, J. P. and Greenfield, P. and Groener, A. M. and Grollier, F. and Hagen, A. and Hirst, P. and Homeier, D. and Horton, A. J. and Hosseinzadeh, G. and Hu, L. and Hunkeler, J. S. and Ivezi{\'c}, {\v Z}. and Jain, A. and Jenness, T. and Kanarek, G. and Kendrew, S. and Kern, N. S. and Kerzendorf, W. E. and Khvalko, A. and King, J. and Kirkby, D. and Kulkarni, A. M. and Kumar, A. and Lee, A. and Lenz, D. and Littlefair, S. P. and Ma, Z. and Macleod, D. M. and Mastropietro, M. and McCully, C. and Montagnac, S. and Morris, B. M. and Mueller, M. and Mumford, S. J. and Muna, D. and Murphy, N. A. and Nelson, S. and Nguyen, G. H. and Ninan, J. P. and N{\"o}the, M. and Ogaz, S. and Oh, S. and Parejko, J. K. and Parley, N. and Pascual, S. and Patil, R. and Patil, A. A. and Plunkett, A. L. and Prochaska, J. X. and Rastogi, T. and Reddy Janga, V. and Sabater, J. and Sakurikar, P. and Seifert, M. and Sherbert, L. E. and {Sherwood-Taylor}, H. and Shih, A. Y. and Sick, J. and Silbiger, M. T. and Singanamalla, S. and Singer, L. P. and Sladen, P. H. and Sooley, K. A. and Sornarajah, S. and Streicher, O. and Teuben, P. and Thomas, S. W. and Tremblay, G. R. and Turner, J. E. H. and Terr{\'o}n, V. and {van Kerkwijk}, M. H. and {de la Vega}, A. and Watkins, L. L. and Weaver, B. A. and Whitmore, J. B. and Woillez, J. and Zabalza, V. and {Astropy Contributors}},
+  year = {2018},
+  month = sep,
+  volume = {156},
+  number = {3},
+  eprint = {1801.02634},
+  eprinttype = {arxiv},
+  primaryclass = {astro-ph.IM},
+  pages = {123},
+  doi = {10.3847/1538-3881/aabc4f},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
+  archiveprefix = {arXiv},
+  eid = {123},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,methods: data analysis,methods: miscellaneous,methods: statistical,reference systems,software}
+}
+
 @book{bappuWolfRayetHighTemperatureStars1973,
   title = {Wolf-{{Rayet}} and {{High-Temperature Stars}}},
   editor = {Bappu, M. K. V. and Sahade, J.},
@@ -196,6 +243,38 @@
   langid = {english},
   annotation = {Bandiera\_abtest: a Cc\_license\_type: cc\_by Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Atmospheric chemistry;Geochemistry Subject\_term\_id: atmospheric-chemistry;geochemistry},
   file = {/Users/py13je/Zotero/storage/ZLEVIEX5/Bekaert et al. - 2020 - The origin and fate of volatile elements on Earth .pdf;/Users/py13je/Zotero/storage/ISHIFAXX/s41598-020-62650-3.html}
+}
+
+@article{bergerAdaptiveMeshRefinement1984,
+  title = {Adaptive Mesh Refinement for Hyperbolic Partial Differential Equations},
+  author = {Berger, Marsha J and Oliger, Joseph},
+  year = {1984},
+  month = mar,
+  journal = {Journal of Computational Physics},
+  volume = {53},
+  number = {3},
+  pages = {484--512},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(84)90073-1},
+  abstract = {An adaptive method based on the idea of multiple component grids for the solution of hyperbolic partial differential equations using finite difference techniques is presented. Based upon Richardson-type estimates of the truncation error, refined grids are created or existing ones removed to attain a given accuracy for a minimum amount of work. The approach is recursive in that fine grids can contain even finer grids. The grids with finer mesh width in space also have a smaller mesh width in time, making this a mesh refinement algorithm in time and space. We present the algorithm, error estimation procedure, and the data structures, and conclude with numerical examples in one and two space dimensions.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/I9CXN2IN/Berger and Oliger - 1984 - Adaptive mesh refinement for hyperbolic partial di.pdf}
+}
+
+@article{bergerLocalAdaptiveMesh1989,
+  title = {Local Adaptive Mesh Refinement for Shock Hydrodynamics},
+  author = {Berger, M. J. and Colella, P.},
+  year = {1989},
+  month = may,
+  journal = {Journal of Computational Physics},
+  volume = {82},
+  number = {1},
+  pages = {64--84},
+  issn = {0021-9991},
+  doi = {10.1016/0021-9991(89)90035-1},
+  abstract = {The aim of this work is the development of an automatic, adaptive mesh refinement strategy for solving hyperbolic conservation laws in two dimensions. There are two main difficulties in doing this. The first problem is due to the presence of discontinuities in the solution and the effect on them of discontinuities in the mesh. The second problem is how to organize the algorithm to minimize memory and CPU overhead. This is an important consideration and will continue to be important as more sophisticated algorithms that use data structures other than arrays are developed for use on vector and parallel computers.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/B5UUSQFX/Berger and Colella - 1989 - Local adaptive mesh refinement for shock hydrodyna.pdf}
 }
 
 @article{betheEnergyProductionStars1939,
@@ -1135,6 +1214,20 @@
   file = {/Users/py13je/Zotero/storage/PSD9TI98/Harries et al. - 2004 - Three-dimensional dust radiative-transfer models .pdf;/Users/py13je/Zotero/storage/63NPPFC8/1116570.html;/Users/py13je/Zotero/storage/ULEXVAEF/1116570.html}
 }
 
+@article{harris2020array,
+  title = {Array Programming with {{NumPy}}},
+  author = {Harris, Charles R. and Millman, K. Jarrod and {van der Walt}, St{\'e}fan J. and Gommers, Ralf and Virtanen, Pauli and Cournapeau, David and Wieser, Eric and Taylor, Julian and Berg, Sebastian and Smith, Nathaniel J. and Kern, Robert and Picus, Matti and Hoyer, Stephan and {van Kerkwijk}, Marten H. and Brett, Matthew and Haldane, Allan and {del R{\'i}o}, Jaime Fern{\'a}ndez and Wiebe, Mark and Peterson, Pearu and {G{\'e}rard-Marchant}, Pierre and Sheppard, Kevin and Reddy, Tyler and Weckesser, Warren and Abbasi, Hameer and Gohlke, Christoph and Oliphant, Travis E.},
+  year = {2020},
+  month = sep,
+  journal = {Nature},
+  volume = {585},
+  number = {7825},
+  pages = {357--362},
+  publisher = {{Springer Science and Business Media LLC}},
+  doi = {10.1038/s41586-020-2649-2},
+  keywords = {software}
+}
+
 @book{hartquist_blowing_2004,
   title = {Blowing {{Bubbles}} in the {{Cosmos}}: {{Astronomical Winds}}, {{Jets}}, and {{Explosions}}},
   shorttitle = {Blowing {{Bubbles}} in the {{Cosmos}}},
@@ -1270,6 +1363,23 @@
   file = {/Users/py13je/Zotero/storage/P5T379HA/wiki.html}
 }
 
+@misc{HPV:VisIt,
+  title = {{{VisIt}}: {{An}} End-User Tool for Visualizing and Analyzing Very Large Data},
+  author = {Childs, Hank and Brugger, Eric and Whitlock, Brad and Meredith, Jeremy and Ahern, Sean and Pugmire, David and Biagas, Kathleen and Miller, Mark and Harrison, Cyrus and Weber, Gunther H. and Krishnan, Hari and Fogal, Thomas and Sanderson, Allen and Garth, Christoph and Bethel, E. Wes and Camp, David and R{\"u}bel, Oliver and Durant, Marc and Favre, Jean M. and Navr{\'a}til, Paul},
+  year = {2012},
+  month = oct
+}
+
+@incollection{HPV:VisIt,
+  title = {{{VisIt}}: {{An}} End-User Tool for Visualizing and Analyzing Very Large Data},
+  booktitle = {High Performance {{Visualization}}\textendash{{Enabling}} Extreme-Scale Scientific Insight},
+  author = {Childs, Hank and Brugger, Eric and Whitlock, Brad and Meredith, Jeremy and Ahern, Sean and Pugmire, David and Biagas, Kathleen and Miller, Mark and Harrison, Cyrus and Weber, Gunther H. and Krishnan, Hari and Fogal, Thomas and Sanderson, Allen and Garth, Christoph and Bethel, E. Wes and Camp, David and R{\"u}bel, Oliver and Durant, Marc and Favre, Jean M. and Navr{\'a}til, Paul},
+  year = {2012},
+  month = oct,
+  pages = {357--372},
+  keywords = {software}
+}
+
 @techreport{huberEffectiveVectorizationOpenMP2017a,
   title = {Effective {{Vectorization}} with {{OpenMP}} 4.5},
   author = {Huber, Joseph N. and Hernandez, Oscar R. and Lopez, Matthew Graham},
@@ -1280,6 +1390,20 @@
   doi = {10.2172/1351758},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/4DKHZ8FA/Huber et al. - 2017 - Effective Vectorization with OpenMP 4.5.pdf}
+}
+
+@article{Hunter:2007,
+  title = {Matplotlib: {{A 2D}} Graphics Environment},
+  author = {Hunter, J. D.},
+  year = {2007},
+  journal = {Computing in Science \& Engineering},
+  volume = {9},
+  number = {3},
+  pages = {90--95},
+  publisher = {{IEEE COMPUTER SOC}},
+  doi = {10.1109/MCSE.2007.55},
+  abstract = {Matplotlib is a 2D graphics package used for Python for application development, interactive scripting, and publication-quality image generation across user interfaces and operating systems.},
+  keywords = {software}
 }
 
 @article{ibenCommonEnvelopesBinary1993,
@@ -3011,6 +3135,16 @@
   doi = {10.1146/annurev.astro.38.1.113},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/FG2V5BZH/Taam and Sandquist - 2000 - Common Envelope Evolution of Massive Binary Stars.pdf}
+}
+
+@misc{tange_2021_5523272,
+  title = {{{GNU}} Parallel 20210922 ('vindelev')},
+  author = {Tange, Ole},
+  year = {2021},
+  month = sep,
+  doi = {10.5281/zenodo.5523272},
+  howpublished = {Zenodo},
+  keywords = {software}
 }
 
 @article{tazzari_physical_2017,
